--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     </head>
 
     <body>
-        <input id="notepadMinimize" name="notepadControl" type="radio" />
+        <input checked id="notepadMinimize" name="notepadControl" type="radio" />
         <input id="notepadMaximize" name="notepadControl" type="radio" />
         <input id="notepadClose" name="notepadControl" type="radio" />
 
-        <input id="calculatorMinimize" name="calculatorControl" type="radio" />
+        <input checked id="calculatorMinimize" name="calculatorControl" type="radio" />
         <input id="calculatorMaximize" name="calculatorControl" type="radio" />
         <input id="calculatorClose" name="calculatorControl" type="radio" />
 
-        <input id="internetMinimize" name="internetControl" type="radio" />
+        <input checked id="internetMinimize" name="internetControl" type="radio" />
         <input id="internetMaximize" name="internetControl" type="radio" />
         <input id="internetClose" name="internetControl" type="radio" />
 
