Windows css Responsivity

--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
         <link href="css/font.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
         <link href="css/displayLogic.css" rel="stylesheet" />
+        <link href="css/responsivity.css" rel="stylesheet" />
     </head>
 
     <body>
-        <input id="notepadMinimize" name="notepadControl" type="radio" />
+        <input checked id="notepadMinimize" name="notepadControl" type="radio" />
         <input id="notepadMaximize" name="notepadControl" type="radio" />
         <input id="notepadClose" name="notepadControl" type="radio" />
 
-        <input id="calculatorMinimize" name="calculatorControl" type="radio" />
+        <input checked id="calculatorMinimize" name="calculatorControl" type="radio" />
         <input id="calculatorMaximize" name="calculatorControl" type="radio" />
         <input id="calculatorClose" name="calculatorControl" type="radio" />
 
-        <input id="internetMinimize" name="internetControl" type="radio" />
+        <input checked id="internetMinimize" name="internetControl" type="radio" />
         <input id="internetMaximize" name="internetControl" type="radio" />
         <input id="internetClose" name="internetControl" type="radio" />
 
@@ -42,7 +43,7 @@
                     </div>
                 </div>
 
-                <iframe src="https://iftm.edu.br/indexant.php" style="border: 0; height: 600px; width: 800px" width="600"></iframe>
+                <iframe frameborder="0" src="components/internet"></iframe>
             </section>
 
             <section class="app flex-column" id="notepad">
