Windows Notepad Max

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     </div>
 
                     <div class="appControls flex">
-                        <label for="internetMinimize">
+                        <label for="notepadMinimize">
                             <img alt="" src="images/minimize.png" />
                         </label>
-                        <label for="notepadMaximize">
+                        <label for="internetMinimize">
                             <img alt="" src="images/max.png" />
                         </label>
                         <label for="notepadClose">
