--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
-        <title>Document</title>
+        <title>Windows CSS</title>
         <link href="css/font.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
         <link href="css/displayLogic.css" rel="stylesheet" />
