--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" name="viewport" />
+        <meta content="ie=edge" http-equiv="X-UA-Compatible" />
         <meta charset="UTF-8" />
         <title>Windows CSS</title>
-        <link href="css/font.css" rel="stylesheet" />
+        <link href="global/style.css" rel="stylesheet" />
         <link href="css/style.css" rel="stylesheet" />
         <link href="css/displayLogic.css" rel="stylesheet" />
-        <link href="css/responsive.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -27,7 +28,7 @@
                 <div class="header flex">
                     <div class="appName flex">
                         <img alt="" src="images/ie.png" />
-                        <p>Internet Explorer - IFTM</p>
+                        <p>Internet</p>
                     </div>
 
                     <div class="appControls flex">
@@ -50,7 +51,7 @@
                 <div class="header flex">
                     <div class="appName flex">
                         <img alt="" src="images/notepad.png" />
-                        <p>Untitled - Notepad</p>
+                        <p>Notepad</p>
                     </div>
 
                     <div class="appControls flex">
@@ -165,6 +166,10 @@
                                 <img alt="" src="images/github-logo.png" />
                                 <p>GitHub</p>
                             </a>
+                            <a class="flex" href="https://www.linkedin.com/in/joao-vitorg" target="_blank">
+                                <img alt="" src="images/linkedin.png" />
+                                <p>Linkedin</p>
+                            </a>
                             <hr />
                             <div class="flex">
                                 <img alt="" src="images/help.png" />
@@ -214,7 +219,6 @@
             <section class="flex" id="notification">
                 <img alt="" src="images/drivers.png" title="Drivers" />
                 <img alt="" src="images/sound.png" title="Volume" />
-                <img alt="" src="images/antivirus.png" title="Windows Security" />
                 <p title="27/06/22">07:00 PM</p>
             </section>
         </footer>
